// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Switch Behaviour 1`] = `
<View
  enabled={true}
  keyboardVerticalOffset={50}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                The Toggle Switch
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Use the switch to represent on/off states.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#e6e6e6",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 22.5,
                  "borderWidth": 1,
                  "height": 32,
                  "width": 56,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 15,
                    "borderWidth": 1,
                    "elevation": 2,
                    "height": 30,
                    "position": "absolute",
                    "shadowColor": "rgba(0, 0, 0, 0.1)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 2,
                    "transform": Array [
                      Object {
                        "translateX": -0.5,
                      },
                    ],
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                value = true
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              This is permanently on.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#FBA928",
                  "borderColor": "#FBA928",
                  "borderRadius": 22.5,
                  "borderWidth": 1,
                  "height": 32,
                  "width": 56,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 15,
                    "borderWidth": 1,
                    "elevation": 2,
                    "height": 30,
                    "position": "absolute",
                    "shadowColor": "rgba(0, 0, 0, 0.1)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 2,
                    "transform": Array [
                      Object {
                        "translateX": 24,
                      },
                    ],
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                value = false
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              This is permanantly off.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#e6e6e6",
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderRadius": 22.5,
                  "borderWidth": 1,
                  "height": 32,
                  "width": 56,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "rgba(0, 0, 0, 0.1)",
                    "borderRadius": 15,
                    "borderWidth": 1,
                    "elevation": 2,
                    "height": 30,
                    "position": "absolute",
                    "shadowColor": "rgba(0, 0, 0, 0.1)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 2,
                    "transform": Array [
                      Object {
                        "translateX": -0.5,
                      },
                    ],
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots Switch Styling 1`] = `
<View
  enabled={true}
  keyboardVerticalOffset={50}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#f0f0f0",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#eee",
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomColor": "#e6e6e6",
                "borderBottomWidth": 1,
                "paddingBottom": 10,
                "paddingHorizontal": 10,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderTopColor": "#e6e6e6",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#666",
                    "fontSize": 10,
                    "paddingBottom": 2,
                    "paddingHorizontal": 4,
                  }
                }
              >
                Use Case
              </Text>
            </View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#3d3d3d",
                    "fontWeight": "600",
                  }
                }
              >
                Custom Styling
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#666",
                  "fontSize": 10,
                  "paddingTop": 0,
                }
              }
            >
              Promise me this won't happen.
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "padding": 10,
              }
            }
          >
            <View>
              <View
                accessible={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "red",
                    "borderColor": "maroon",
                    "borderRadius": 22.5,
                    "borderWidth": 1,
                    "height": 32,
                    "width": 56,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "pink",
                      "borderColor": "rgba(0, 0, 0, 0.1)",
                      "borderRadius": 15,
                      "borderWidth": 1,
                      "elevation": 2,
                      "height": 30,
                      "position": "absolute",
                      "shadowColor": "rgba(0, 0, 0, 0.1)",
                      "shadowOffset": Object {
                        "height": 2,
                        "width": 1,
                      },
                      "shadowOpacity": 1,
                      "shadowRadius": 2,
                      "transform": Array [
                        Object {
                          "translateX": -0.5,
                        },
                      ],
                      "width": 30,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
